Fix for 8151988 causes performance regression on SPARC

XMLWordPrintable

    • b146
    • sparc

      The fix for JDK-8151988 moved the ModNode control input optimization from Ideal to the final graph reshaping phase to enable finding similar DivNodes for the DivMod optimization. This caused a significant performance regression for some (internal) benchmarks on SPARC because SPARC does not implement the DivModNode.

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: