8168770: Fix for 8151988 causes performance regression on SPARC

Reversed and re-implemented fix for 8151988 to eagerly cut off control input of Div and Mod nodes.

Reviewed-by: kvn